--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description"
+                content="Tareas por hacer?, aplicacion para indicar tus tareas por hacer, recuerda no dejes para mñana lo que puedas hacer hoy ">
+    <meta name="theme-color" content="#F0DB4F">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="shortcut icon" type="image/png" href="./img/lista_24.png">
+    <link rel="apple-touch-icon" href="./img/lista_32.png">
+    <link rel="apple-touch-startup-image" href="./lista_64.png">
+    <link rel="manifest" href="./manifest.json">
     <script src="./script.js" defer></script>
 </head>
 
