--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="shortcut icon" type="image/png" href="./img/lista_24.png">
-    <link rel="apple-touch-icon" href="./img/lista_32.png">
-    <link rel="apple-touch-startup-image" href="./lista_64.png">
+    <link rel="shortcut icon" type="image/png" href="./image/lista_24.png">
+    <link rel="apple-touch-icon" href="./image/lista_32.png">
+    <link rel="apple-touch-startup-image" href="./image/lista_64.png">
     <link rel="manifest" href="./manifest.json">
     <script src="./script.js" defer></script>
 </head>
