--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="input" class="input" placeholder="Enter your todo" autocomplete="off" />
         <ul class="todos" id="todos"></ul>
     </form>
-    <small>Left click to toggle complete. <br />Right click to delete the todo.</small>
+    <small>Left click or tap to toggle complete. <br />Right click or Hold Down to delete the todo.</small>
 </body>
 
 </html>
